# bpmf_py_rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: main.rs
src/: bpmf.rs  bpmf_chars.rs  lib.rs  tests.rs
src/bpmf/: data.rs  enums.rs  spell_tree.rs
src/tests/: resources.rs
